[gd_scene load_steps=18 format=4 uid="uid://jo6vqavbdbl"]

[ext_resource type="PackedScene" uid="uid://b15tx8w4ae21b" path="res://Scenes/player.tscn" id="1_1kkd2"]
[ext_resource type="Script" uid="uid://dktc6jdh72bqh" path="res://Scripts/Global.gd" id="1_iqshn"]
[ext_resource type="Texture2D" uid="uid://con4isi3w0omi" path="res://Assets/floor-temp.png" id="2_ugfji"]
[ext_resource type="Script" uid="uid://dtdwcbvjcl4js" path="res://Scripts/middle_barrier.gd" id="4_llw6p"]
[ext_resource type="Script" uid="uid://0d3kblemue4h" path="res://Scripts/Ball.gd" id="5_ugojq"]
[ext_resource type="Script" uid="uid://bhp4p3j1pv44e" path="res://wall.gd" id="6_4rqys"]
[ext_resource type="Script" uid="uid://48u68qey37rh" path="res://Scenes/paddle.gd" id="7_iinhh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_olncf"]
texture = ExtResource("2_ugfji")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_4sypl"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Floor"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 1, 1)
sources/0 = SubResource("TileSetAtlasSource_olncf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cl8gq"]
size = Vector2(15, 643.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lta0x"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_atu7p"]
radius = 23.0217

[sub_resource type="SphereMesh" id="SphereMesh_vqlir"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4t1ar"]
radius = 23.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhcyr"]
size = Vector2(19, 629)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyskm"]
size = Vector2(25, 99)

[sub_resource type="QuadMesh" id="QuadMesh_m3feo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_iqshn")

[node name="Player1" parent="." instance=ExtResource("1_1kkd2")]
position = Vector2(186, 495)
jump = "jump_1"
left = "left_1"
right = "right_1"
throw = "throw_1"
player = 1

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AABHACgAAAAAAAAAAABGACgAAAAAAAAAAABFACgAAAAAAAAAAABEACgAAAAAAAAAAABDACgAAAAAAAAAAABCACgAAAAAAAAAAABBACgAAAAAAAAAAABAACgAAAAAAAAAAAA/ACgAAAAAAAAAAAA+ACgAAAAAAAAAAAA9ACgAAAAAAAAAAAA8ACgAAAAAAAAAAAA7ACgAAAAAAAAAAAA6ACgAAAAAAAAAAAA5ACgAAAAAAAAAAAA4ACgAAAAAAAAAAAA3ACgAAAAAAAAAAAA2ACgAAAAAAAAAAAA1ACgAAAAAAAAAAAA0ACgAAAAAAAAAAAAzACgAAAAAAAAAAAAyACgAAAAAAAAAAAAxACgAAAAAAAAAAAAwACgAAAAAAAAAAAAvACgAAAAAAAAAAAAuACgAAAAAAAAAAAAtACgAAAAAAAAAAAAsACgAAAAAAAAAAAArACgAAAAAAAAAAAAqACgAAAAAAAAAAAApACgAAAAAAAAAAAAoACgAAAAAAAAAAAAnACgAAAAAAAAAAAAmACgAAAAAAAAAAAAlACgAAAAAAAAAAAAkACgAAAAAAAAAAAAjACgAAAAAAAAAAAAiACgAAAAAAAAAAAAhACgAAAAAAAAAAAAgACgAAAAAAAAAAAAfACgAAAAAAAAAAAAeACgAAAAAAAAAAAAdACgAAAAAAAAAAAAcACgAAAAAAAAAAAAbACgAAAAAAAAAAAAaACgAAAAAAAAAAAAZACgAAAAAAAAAAAAYACgAAAAAAAAAAAAXACgAAAAAAAAAAAAWACgAAAAAAAAAAAAVACgAAAAAAAAAAAAUACgAAAAAAAAAAAATACgAAAAAAAAAAAASACgAAAAAAAAAAAARACgAAAAAAAAAAAAQACgAAAAAAAAAAAAPACgAAAAAAAAAAAAOACgAAAAAAAAAAAANACgAAAAAAAAAAAAMACgAAAAAAAAAAAALACgAAAAAAAAAAAAKACgAAAAAAAAAAAAJACgAAAAAAAAAAAAIACgAAAAAAAAAAAAHACgAAAAAAAAAAAAGACgAAAAAAAAAAAAFACgAAAAAAAAAAAAEACgAAAAAAAAAAAADACgAAAAAAAAAAAACACgAAAAAAAAAAAABACgAAAAAAAAAAAAAACgAAAAAAAAAAABHACcAAAAAAAAAAABGACcAAAAAAAAAAABFACcAAAAAAAAAAABEACcAAAAAAAAAAABDACcAAAAAAAAAAABCACcAAAAAAAAAAABBACcAAAAAAAAAAABAACcAAAAAAAAAAAA/ACcAAAAAAAAAAAA+ACcAAAAAAAAAAAA9ACcAAAAAAAAAAAA8ACcAAAAAAAAAAAA7ACcAAAAAAAAAAAA6ACcAAAAAAAAAAAA5ACcAAAAAAAAAAAA4ACcAAAAAAAAAAAA3ACcAAAAAAAAAAAA2ACcAAAAAAAAAAAA1ACcAAAAAAAAAAAA0ACcAAAAAAAAAAAAzACcAAAAAAAAAAAAyACcAAAAAAAAAAAAxACcAAAAAAAAAAAAwACcAAAAAAAAAAAAvACcAAAAAAAAAAAAuACcAAAAAAAAAAAAtACcAAAAAAAAAAAAsACcAAAAAAAAAAAArACcAAAAAAAAAAAAqACcAAAAAAAAAAAApACcAAAAAAAAAAAAoACcAAAAAAAAAAAAnACcAAAAAAAAAAAAmACcAAAAAAAAAAAAlACcAAAAAAAAAAAAkACcAAAAAAAAAAAAjACcAAAAAAAAAAAAiACcAAAAAAAAAAAAhACcAAAAAAAAAAAAgACcAAAAAAAAAAAAfACcAAAAAAAAAAAAeACcAAAAAAAAAAAAdACcAAAAAAAAAAAAcACcAAAAAAAAAAAAbACcAAAAAAAAAAAAaACcAAAAAAAAAAAAZACcAAAAAAAAAAAAYACcAAAAAAAAAAAAXACcAAAAAAAAAAAAWACcAAAAAAAAAAAAVACcAAAAAAAAAAAAUACcAAAAAAAAAAAATACcAAAAAAAAAAAASACcAAAAAAAAAAAARACcAAAAAAAAAAAAQACcAAAAAAAAAAAAPACcAAAAAAAAAAAAOACcAAAAAAAAAAAANACcAAAAAAAAAAAAMACcAAAAAAAAAAAALACcAAAAAAAAAAAAKACcAAAAAAAAAAAAJACcAAAAAAAAAAAAIACcAAAAAAAAAAAAHACcAAAAAAAAAAAAGACcAAAAAAAAAAAAFACcAAAAAAAAAAAAEACcAAAAAAAAAAAADACcAAAAAAAAAAAACACcAAAAAAAAAAAABACcAAAAAAAAAAAAAACcAAAAAAAAAAAAAACYAAAAAAAAAAAAAACUAAAAAAAAAAAAAACQAAAAAAAAAAAAAACMAAAAAAAAAAAAAACIAAAAAAAAAAAAAACEAAAAAAAAAAAAAACAAAAAAAAAAAAAAAB8AAAAAAAAAAAAAAB4AAAAAAAAAAAAAAB0AAAAAAAAAAAAAABwAAAAAAAAAAAAAABsAAAAAAAAAAAAAABoAAAAAAAAAAAAAABkAAAAAAAAAAAAAABgAAAAAAAAAAAAAABcAAAAAAAAAAAAAABYAAAAAAAAAAAAAABUAAAAAAAAAAAAAABQAAAAAAAAAAAAAABMAAAAAAAAAAAAAABIAAAAAAAAAAAAAABEAAAAAAAAAAAAAABAAAAAAAAAAAAAAAA8AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA0AAAAAAAAAAAAAAAwAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAABHACYAAAAAAAAAAABHACUAAAAAAAAAAABHACQAAAAAAAAAAABHACMAAAAAAAAAAABHACIAAAAAAAAAAABHACEAAAAAAAAAAABHACAAAAAAAAAAAABHAB8AAAAAAAAAAABHAB4AAAAAAAAAAABHAB0AAAAAAAAAAABHABwAAAAAAAAAAABHABsAAAAAAAAAAABHABoAAAAAAAAAAABHABkAAAAAAAAAAABHABgAAAAAAAAAAABHABcAAAAAAAAAAABHABYAAAAAAAAAAABHABUAAAAAAAAAAABHABQAAAAAAAAAAABHABMAAAAAAAAAAABHABIAAAAAAAAAAABHABEAAAAAAAAAAABHABAAAAAAAAAAAABHAA8AAAAAAAAAAABHAA4AAAAAAAAAAABHAA0AAAAAAAAAAABHAAwAAAAAAAAAAABHAAsAAAAAAAAAAABHAAoAAAAAAAAAAABHAAkAAAAAAAAAAABHAAgAAAAAAAAAAABHAAcAAAAAAAAAAABHAAYAAAAAAAAAAABHAAUAAAAAAAAAAABHAAQAAAAAAAAAAABHAAMAAAAAAAAAAABHAAIAAAAAAAAAAABHAAEAAAAAAAAAAABHAAAAAAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAAkAP//AAAAAAAAAAAlAP//AAAAAAAAAAAmAP//AAAAAAAAAAAnAP//AAAAAAAAAAAoAP//AAAAAAAAAAApAP//AAAAAAAAAAAqAP//AAAAAAAAAAArAP//AAAAAAAAAAAsAP//AAAAAAAAAAAtAP//AAAAAAAAAAAuAP//AAAAAAAAAAAvAP//AAAAAAAAAAAwAP//AAAAAAAAAAAxAP//AAAAAAAAAAAyAP//AAAAAAAAAAAzAP//AAAAAAAAAAA0AP//AAAAAAAAAAA1AP//AAAAAAAAAAA2AP//AAAAAAAAAAA3AP//AAAAAAAAAAA4AP//AAAAAAAAAAA5AP//AAAAAAAAAAA6AP//AAAAAAAAAAA7AP//AAAAAAAAAAA8AP//AAAAAAAAAAA9AP//AAAAAAAAAAA+AP//AAAAAAAAAAA/AP//AAAAAAAAAABAAP//AAAAAAAAAABBAP//AAAAAAAAAABCAP//AAAAAAAAAABDAP//AAAAAAAAAABEAP//AAAAAAAAAABFAP//AAAAAAAAAABGAP//AAAAAAAAAABHAP//AAAAAAAAAAA=")
tile_set = SubResource("TileSet_4sypl")

[node name="Middle Barrier" type="Area2D" parent="."]
position = Vector2(568, 319)
script = ExtResource("4_llw6p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle Barrier"]
shape = SubResource("RectangleShape2D_cl8gq")

[node name="Player2" parent="." instance=ExtResource("1_1kkd2")]
position = Vector2(930, 488)
jump = "jump_2"
left = "left_2"
right = "right_2"
throw = "throw_2"
player = -1

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(567, 232)
collision_layer = 2
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_lta0x")
script = ExtResource("5_ugojq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_atu7p")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ball"]
modulate = Color(1, 1, 0, 1)
position = Vector2(6.67572e-06, -2.52724e-05)
scale = Vector2(46.0522, 46)
mesh = SubResource("SphereMesh_vqlir")

[node name="Area2D" type="Area2D" parent="Ball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Area2D"]
shape = SubResource("CircleShape2D_4t1ar")

[node name="Left Wall" type="Area2D" parent="."]
position = Vector2(9, 325)
collision_layer = 3
collision_mask = 3
script = ExtResource("6_4rqys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall"]
position = Vector2(1, -10.5)
shape = SubResource("RectangleShape2D_mhcyr")

[node name="Right Wall" type="Area2D" parent="."]
position = Vector2(1142, 313)
collision_layer = 3
collision_mask = 3
script = ExtResource("6_4rqys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Wall"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_mhcyr")

[node name="Left Paddle" type="CharacterBody2D" parent="."]
position = Vector2(60, 324)
collision_layer = 2
collision_mask = 2
script = ExtResource("7_iinhh")
up = "up_1"
down = "down_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Paddle"]
position = Vector2(2.5, -0.5)
shape = SubResource("RectangleShape2D_oyskm")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Left Paddle"]
modulate = Color(0, 0, 0, 1)
position = Vector2(2.5, -0.500006)
scale = Vector2(25, 99)
mesh = SubResource("QuadMesh_m3feo")

[node name="Right Paddle" type="CharacterBody2D" parent="."]
position = Vector2(1092, 318)
collision_layer = 2
collision_mask = 2
script = ExtResource("7_iinhh")
up = "up_2"
down = "down_2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Paddle"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_oyskm")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Right Paddle"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1.19209e-07, -0.500006)
scale = Vector2(26.0001, 99)
mesh = SubResource("QuadMesh_m3feo")

[connection signal="body_entered" from="Middle Barrier" to="Middle Barrier" method="_on_body_entered"]
[connection signal="body_exited" from="Middle Barrier" to="Middle Barrier" method="_on_body_exited"]
[connection signal="body_entered" from="Ball/Area2D" to="Ball" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Left Wall" to="Left Wall" method="_on_body_entered"]
[connection signal="body_entered" from="Right Wall" to="Right Wall" method="_on_body_entered"]
